ingress/netflix/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name : netflix-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      env: netflix
  template:
    metadata:
      name: netflix-pod
      labels:
        env: netflix
    spec:
      containers:
      - name: netflix-container
        image: devopsinsiders/netflix-clone
#        image: nginx:1.14.2
        ports:
          - containerPort: 80
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 4
      maxUnavailable: 4
