ingress/netflix/service.yaml
# LoadBalancer Service
apiVersion: v1
kind: Service
metadata: 
  name: netflix-service
spec:
  selector:
    env: netflix
  type: LoadBalancer
  ports:
  - port: 9001
    targetPort: 80
