ingress/netflix/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: netflix-ingress
spec:
  rules:
    - host: netflix.robintech.online
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service: 
                name: netflix-service
                port:
                  number: 9001
